# FES-Elbow-flexion-control

./: .gitignore  README.md  app.py  app.spec  pyproject.toml
src/teslasuit_joint_control/: control_system.py  main_window.py  suit_handler.py
teslasuit_sdk/: ts_loader.py
teslasuit_sdk/subsystems/: ts_haptic.py
